feat: add CRUD operations for the post